--- a/frontend/src/components/statics/css/notes.css
+++ b/frontend/src/components/statics/css/notes.css
@@ -1,82 +1,154 @@
 @import "../../../utils/colors.css";
 @media only screen and (min-width: 1920px) {
-  .notes_root {
-    width: 800px !important;
-    height: 800px;
-    position: relative;
-    background: var(--white);
-    border-radius: 20px;
-    box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
-    flex-grow: 1;
-  }
-  .notes_notePadTop {
-    width: 100%;
-  }
-  .notes_line {
-    background-color: var(--grey1);
-    opacity: 30%;
-    width: 550px;
-    height: 2px;
-    position: relative;
-    margin-top: 15px;
-    left: 38px;
-  }
-  .notes_titleTextContainer {
-    position: relative;
-    margin-top: 30px;
-  }
-  .notes_titleText {
-    position: relative;
-    font-weight: bold;
-    font-size: 1.7em;
-    cursor: text;
-    position: relative;
-    margin-left: 40px;
-  }
-  .notes_notePadBot {
-    text-align: justify;
-    position: relative;
-    top: 25px;
-  }
-  .notes_contentTextContainer {
-    width: 88%;
-    text-align: justify;
-    line-height: 2em;
-    position: relative;
-    left: 38px;
-  }
-  .notes_contentText {
-    position: relative;
-    font-size: 1.15em;
-  }
-  .notes_closeButtonContainer {
-    height: 80px;
-  }
-  .notes_closeButton {
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
-    cursor: pointer;
-    padding: 8px;
-    position: absolute;
-    top: 20px;
-    right: 20px;
-  }
-  .notes_trashButtonContainer {
-    position: absolute;
-    right: 20px;
-    top: 620px;
-  }
-  .notes_trashButton {
-    bottom: 50px;
-    width: 20px;
-    height: 20px;
-    padding: 8px;
-    border-radius: 50%;
-    color: var(--red4);
-    cursor: pointer;
-  }
+    .notes_root {
+        width: 100% !important;
+        height: 900px;
+        position: relative;
+        background: var(--white);
+        border-radius: 20px;
+        box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
+        flex-grow: 1;
+    }
+    .notes_notePadTop {
+        width: 100%;
+    }
+    .notes_line {
+        background-color: var(--grey1);
+        opacity: 30%;
+        width: 90%;
+        height: 2px;
+        position: relative;
+        margin-top: 15px;
+        left: 38px;
+    }
+    .notes_titleTextContainer {
+        position: relative;
+        margin-top: 30px;
+    }
+    .notes_titleText {
+        position: relative;
+        font-weight: bold;
+        font-size: 1.7em;
+        cursor: text;
+        position: relative;
+        margin-left: 40px;
+    }
+    .notes_notePadBot {
+        text-align: justify;
+        position: relative;
+        top: 25px;
+    }
+    .notes_contentTextContainer {
+        width: 88%;
+        text-align: justify;
+        line-height: 2em;
+        position: relative;
+        left: 38px;
+    }
+    .notes_contentText {
+        position: relative;
+        font-size: 1.15em;
+    }
+    .notes_closeButtonContainer {
+        height: 80px;
+    }
+    .notes_closeButton {
+        width: 20px;
+        height: 20px;
+        border-radius: 50%;
+        cursor: pointer;
+        padding: 8px;
+        position: absolute;
+        top: 20px;
+        right: 20px;
+    }
+    .notes_trashButtonContainer {
+        position: absolute;
+        right: 20px;
+        top: 720px;
+    }
+    .notes_trashButton {
+        bottom: 50px;
+        width: 20px;
+        height: 20px;
+        padding: 8px;
+        border-radius: 50%;
+        color: var(--red4);
+        cursor: pointer;
+    }
 }
 
 @media only screen and (max-width: 1919px) {
+    .notes_root {
+        height: 92vh;
+        background: var(--white);
+        border-radius: 20px;
+        box-shadow: 2px 2px 10px -3px rgba(0, 0, 0, 0.2);
+        flex-grow: 1;
+    }
+    .notes_notePadTop {
+        width: 100%;
+    }
+    .notes_line {
+        background-color: var(--grey1);
+        opacity: 30%;
+        width: 90%;
+        height: 2px;
+        position: relative;
+        margin-top: 15px;
+        left: 38px;
+    }
+    .notes_titleTextContainer {
+        position: relative;
+        margin-top: 30px;
+    }
+    .notes_titleText {
+        position: relative;
+        font-weight: bold;
+        font-size: 1.2em;
+        cursor: text;
+        position: relative;
+        margin-left: 8%;
+    }
+    .notes_notePadBot {
+        text-align: justify;
+        position: relative;
+        top: 25px;
+    }
+    .notes_contentTextContainer {
+        width: 88%;
+        text-align: justify;
+        line-height: 1.85em;
+        position: relative;
+        left: 5%;
+    }
+    .notes_contentText {
+        position: relative;
+        font-size: 1em;
+    }
+    .notes_closeButtonContainer {
+        height: 80px;
+    }
+    .notes_closeButton {
+        width: 20px;
+        height: 20px;
+        border-radius: 50%;
+        padding: 8px;
+        cursor: pointer;
+        position: absolute;
+        top: 25px;
+    }
+    .notes_trashButtonContainer {
+        position: absolute;
+        right: 20px;
+        top: 550px;
+    }
+    .notes_trashButton {
+        width: 20px;
+        height: 20px;
+        padding: 8px;
+        border-radius: 50%;
+        color: var(--red4);
+        cursor: pointer;
+    }
 }
